--- a/Gears.vcxproj.filters
+++ b/Gears.vcxproj.filters
@@ -16,117 +16,141 @@
       <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
       <Extensions>h;hh;hpp;hxx;h++;hm;inl;inc;ipp;xsd</Extensions>
     </Filter>
+    <Filter Include="Resource Files\Source Files\Core">
+      <UniqueIdentifier>{d3be3ec9-65b4-4f85-bbcf-68a4a504fb49}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Resource Files\Header Files\Editor">
+      <UniqueIdentifier>{3964c90e-ced7-4eb7-972b-0127e2dfb546}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Resource Files\Source Files\Editor">
+      <UniqueIdentifier>{e6bed7ac-df58-4119-9e80-4cb8651a1d44}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Resource Files\Header Files\Core">
+      <UniqueIdentifier>{d2f67161-023c-4103-945d-d6fb9505f53f}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Engine\Core\main.cpp">
-      <Filter>Resource Files\Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Engine\Core\gCommon.cpp">
-      <Filter>Resource Files\Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Engine\Core\gApplication.cpp">
-      <Filter>Resource Files\Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Engine\Core\gInputMg.cpp">
-      <Filter>Resource Files\Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Engine\Core\gVideoMg.cpp">
-      <Filter>Resource Files\Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Engine\Core\gLogger.cpp">
-      <Filter>Resource Files\Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="3rdParty\opengl\glad.c">
       <Filter>Resource Files\Source Files\3rdParty</Filter>
     </ClCompile>
-    <ClCompile Include="Engine\Core\gAudioMg.cpp">
-      <Filter>Resource Files\Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Engine\Core\gSoundBuffer.cpp">
-      <Filter>Resource Files\Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Engine\Core\gSoundSource.cpp">
-      <Filter>Resource Files\Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Engine\Core\gSoundDevice.cpp">
-      <Filter>Resource Files\Source Files</Filter>
+    <ClCompile Include="Engine\Core\gApplication.cpp">
+      <Filter>Resource Files\Source Files\Core</Filter>
     </ClCompile>
     <ClCompile Include="Engine\Core\gAudioBuffer.cpp">
-      <Filter>Resource Files\Source Files</Filter>
+      <Filter>Resource Files\Source Files\Core</Filter>
     </ClCompile>
-    <ClCompile Include="Engine\Core\gSoundEffectsLib.cpp">
-      <Filter>Resource Files\Source Files</Filter>
+    <ClCompile Include="Engine\Core\gAudioMg.cpp">
+      <Filter>Resource Files\Source Files\Core</Filter>
     </ClCompile>
-    <ClCompile Include="Engine\Core\gSoundEffectsPlayer.cpp">
-      <Filter>Resource Files\Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Engine\Core\gMesh.cpp">
-      <Filter>Resource Files\Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Engine\Core\gModel.cpp">
-      <Filter>Resource Files\Source Files</Filter>
+    <ClCompile Include="Engine\Core\gCommon.cpp">
+      <Filter>Resource Files\Source Files\Core</Filter>
     </ClCompile>
     <ClCompile Include="Engine\Core\gImage.cpp">
-      <Filter>Resource Files\Header Files</Filter>
+      <Filter>Resource Files\Source Files\Core</Filter>
+    </ClCompile>
+    <ClCompile Include="Engine\Core\gInputMg.cpp">
+      <Filter>Resource Files\Source Files\Core</Filter>
+    </ClCompile>
+    <ClCompile Include="Engine\Core\gLogger.cpp">
+      <Filter>Resource Files\Source Files\Core</Filter>
+    </ClCompile>
+    <ClCompile Include="Engine\Core\gMesh.cpp">
+      <Filter>Resource Files\Source Files\Core</Filter>
+    </ClCompile>
+    <ClCompile Include="Engine\Core\gModel.cpp">
+      <Filter>Resource Files\Source Files\Core</Filter>
+    </ClCompile>
+    <ClCompile Include="Engine\Core\gSoundBuffer.cpp">
+      <Filter>Resource Files\Source Files\Core</Filter>
+    </ClCompile>
+    <ClCompile Include="Engine\Core\gSoundDevice.cpp">
+      <Filter>Resource Files\Source Files\Core</Filter>
+    </ClCompile>
+    <ClCompile Include="Engine\Core\gSoundEffectsLib.cpp">
+      <Filter>Resource Files\Source Files\Core</Filter>
+    </ClCompile>
+    <ClCompile Include="Engine\Core\gSoundEffectsPlayer.cpp">
+      <Filter>Resource Files\Source Files\Core</Filter>
+    </ClCompile>
+    <ClCompile Include="Engine\Core\gSoundSource.cpp">
+      <Filter>Resource Files\Source Files\Core</Filter>
+    </ClCompile>
+    <ClCompile Include="Engine\Core\gVideoMg.cpp">
+      <Filter>Resource Files\Source Files\Core</Filter>
+    </ClCompile>
+    <ClCompile Include="Engine\Core\main.cpp">
+      <Filter>Resource Files\Source Files\Core</Filter>
+    </ClCompile>
+    <ClCompile Include="Engine\Editor\gEditor.cpp">
+      <Filter>Resource Files\Source Files\Editor</Filter>
+    </ClCompile>
+    <ClCompile Include="Engine\Editor\gHeaderPanel.cpp">
+      <Filter>Resource Files\Source Files\Editor</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Engine\Core\gSoundEffectsPlayer.h">
-      <Filter>Resource Files\Source Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Engine\Core\gMemory.h">
-      <Filter>Resource Files\Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Engine\Core\gLogger.h">
-      <Filter>Resource Files\Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Engine\Core\gMemoryMg.h">
-      <Filter>Resource Files\Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Engine\Core\gSoundBuffer.h">
-      <Filter>Resource Files\Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Engine\Core\gSoundDevice.h">
-      <Filter>Resource Files\Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Engine\Core\gSoundEffectsLib.h">
-      <Filter>Resource Files\Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Engine\Core\gSoundSource.h">
-      <Filter>Resource Files\Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Engine\Core\gVideoMg.h">
-      <Filter>Resource Files\Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Engine\Core\gCamera.h">
-      <Filter>Resource Files\Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Engine\Core\gCommon.h">
-      <Filter>Resource Files\Header Files</Filter>
+    <ClInclude Include="Engine\Editor\gEditor.h">
+      <Filter>Resource Files\Header Files\Editor</Filter>
     </ClInclude>
     <ClInclude Include="Engine\Core\gApplication.h">
-      <Filter>Resource Files\Header Files</Filter>
+      <Filter>Resource Files\Header Files\Core</Filter>
     </ClInclude>
     <ClInclude Include="Engine\Core\gAudioBuffer.h">
-      <Filter>Resource Files\Header Files</Filter>
+      <Filter>Resource Files\Header Files\Core</Filter>
     </ClInclude>
     <ClInclude Include="Engine\Core\gAudioMg.h">
-      <Filter>Resource Files\Header Files</Filter>
+      <Filter>Resource Files\Header Files\Core</Filter>
     </ClInclude>
-    <ClInclude Include="Engine\Core\gInputMg.h">
-      <Filter>Resource Files\Header Files</Filter>
+    <ClInclude Include="Engine\Core\gCamera.h">
+      <Filter>Resource Files\Header Files\Core</Filter>
     </ClInclude>
-    <ClInclude Include="Engine\Core\gShader.h">
-      <Filter>Resource Files\Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Engine\Core\gModel.h">
-      <Filter>Resource Files\Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Engine\Core\gMesh.h">
-      <Filter>Resource Files\Header Files</Filter>
+    <ClInclude Include="Engine\Core\gCommon.h">
+      <Filter>Resource Files\Header Files\Core</Filter>
     </ClInclude>
     <ClInclude Include="Engine\Core\gImage.h">
-      <Filter>Resource Files\Header Files</Filter>
+      <Filter>Resource Files\Header Files\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="Engine\Core\gInputMg.h">
+      <Filter>Resource Files\Header Files\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="Engine\Core\gLogger.h">
+      <Filter>Resource Files\Header Files\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="Engine\Core\gMemory.h">
+      <Filter>Resource Files\Header Files\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="Engine\Core\gMemoryMg.h">
+      <Filter>Resource Files\Header Files\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="Engine\Core\gMesh.h">
+      <Filter>Resource Files\Header Files\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="Engine\Core\gShader.h">
+      <Filter>Resource Files\Header Files\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="Engine\Core\gModel.h">
+      <Filter>Resource Files\Header Files\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="Engine\Core\gSoundBuffer.h">
+      <Filter>Resource Files\Header Files\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="Engine\Core\gSoundDevice.h">
+      <Filter>Resource Files\Header Files\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="Engine\Core\gSoundEffectsLib.h">
+      <Filter>Resource Files\Header Files\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="Engine\Core\gSoundEffectsPlayer.h">
+      <Filter>Resource Files\Header Files\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="Engine\Core\gSoundSource.h">
+      <Filter>Resource Files\Header Files\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="Engine\Core\gVideoMg.h">
+      <Filter>Resource Files\Header Files\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="Engine\Editor\gHeaderPanel.h">
+      <Filter>Resource Files\Source Files\Editor</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
