--- a/Gears.vcxproj
+++ b/Gears.vcxproj
@@ -231,6 +231,8 @@
     <ClCompile Include="Engine\Core\gLogger.cpp" />
     <ClCompile Include="Engine\Core\gMesh.cpp" />
     <ClCompile Include="Engine\Core\gModel.cpp" />
+    <ClCompile Include="Engine\Core\gObject.cpp" />
+    <ClCompile Include="Engine\Core\gParticleEmitter.cpp" />
     <ClCompile Include="Engine\Core\gSoundBuffer.cpp" />
     <ClCompile Include="Engine\Core\gSoundDevice.cpp" />
     <ClCompile Include="Engine\Core\gSoundEffectsLib.cpp" />
@@ -239,16 +241,22 @@
     <ClCompile Include="Engine\Core\gVideoMg.cpp" />
     <ClCompile Include="Engine\Core\main.cpp" />
     <ClCompile Include="Engine\Editor\gConsole.cpp" />
+    <ClCompile Include="Engine\Editor\gContentBrowser.cpp" />
     <ClCompile Include="Engine\Editor\gEditor.cpp" />
+    <ClCompile Include="Engine\Editor\gGizmo.cpp" />
+    <ClCompile Include="Engine\Editor\gGizmoInit.cpp" />
     <ClCompile Include="Engine\Editor\gHeaderPanel.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="3rdParty\imgui\imgui_impl_opengl3.h" />
+    <ClInclude Include="Engine\Core\Containers\gObjectsList.h" />
+    <ClInclude Include="Engine\Core\gAmbientLight.h" />
     <ClInclude Include="Engine\Core\gApplication.h" />
     <ClInclude Include="Engine\Core\gAudioBuffer.h" />
     <ClInclude Include="Engine\Core\gAudioMg.h" />
     <ClInclude Include="Engine\Core\gCamera.h" />
     <ClInclude Include="Engine\Core\gCommon.h" />
+    <ClInclude Include="Engine\Core\gDefferedShading.h" />
     <ClInclude Include="Engine\Core\gImage.h" />
     <ClInclude Include="Engine\Core\gInputMg.h" />
     <ClInclude Include="Engine\Core\gLogger.h" />
@@ -256,6 +264,9 @@
     <ClInclude Include="Engine\Core\gMemoryMg.h" />
     <ClInclude Include="Engine\Core\gMesh.h" />
     <ClInclude Include="Engine\Core\gModel.h" />
+    <ClInclude Include="Engine\Core\gObject.h" />
+    <ClInclude Include="Engine\Core\gParticleEmitter.h" />
+    <ClInclude Include="Engine\Core\gParticle.h" />
     <ClInclude Include="Engine\Core\gShader.h" />
     <ClInclude Include="Engine\Core\gSoundBuffer.h" />
     <ClInclude Include="Engine\Core\gSoundDevice.h" />
@@ -265,8 +276,12 @@
     <ClInclude Include="Engine\Core\gTemplate.h" />
     <ClInclude Include="Engine\Core\gVideoMg.h" />
     <ClInclude Include="Engine\Editor\gConsole.h" />
+    <ClInclude Include="Engine\Editor\gContentBrowser.h" />
     <ClInclude Include="Engine\Editor\gEditor.h" />
+    <ClInclude Include="Engine\Editor\gGizmo.hpp" />
     <ClInclude Include="Engine\Editor\gHeaderPanel.h" />
+    <ClInclude Include="Engine\Editor\gUtil.hpp" />
+    <ClInclude Include="Engine\Editor\linalg.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="3rdParty\vcpkg\packages\libsndfile_x64-windows\bin\sndfile.dll" />
