--- a/imgui.ini
+++ b/imgui.ini
@@ -15,6 +15,84 @@ Collapsed=0
 
 [Window][Console]
 Pos=512,1226
-Size=1500,150
+Size=1536,150
 Collapsed=0
+
+[Window][Browser]
+Pos=0,150
+Size=512,710
+Collapsed=0
+
+[Window][Choose File##ChooseFileDlgKey]
+Pos=897,177
+Size=631,668
+Collapsed=0
+
+[Window][SceneObjects]
+Pos=0,860
+Size=512,515
+Collapsed=0
+
+[Window][Properties]
+Pos=2048,150
+Size=512,1226
+Collapsed=0
+
+[Window][FrameBuffer]
+Pos=0,150
+Size=500,32
+Collapsed=0
+
+[Window][Background Window]
+Pos=512,150
+Size=1536,1076
+Collapsed=0
+
+[Table][0x1A40F449,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x97045D15,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xD3FED166,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x611DC48D,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x03464D28,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xCE6B08D3,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xDAD7ECCF,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x66F2D635,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x941D1BE5,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x66A92CE8,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x2318634E,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x569AF373,4]
+RefScale=18
+Column 0  Sort=0v
 
