--- a/imgui.ini
+++ b/imgui.ini
@@ -24,7 +24,7 @@ Size=512,710
 Collapsed=0
 
 [Window][Choose File##ChooseFileDlgKey]
-Pos=897,177
+Pos=890,159
 Size=631,668
 Collapsed=0
 
@@ -46,6 +46,11 @@ Collapsed=0
 [Window][Background Window]
 Pos=512,150
 Size=1536,1076
+Collapsed=0
+
+[Window][Save File##SaveFileDlgKey]
+Pos=832,119
+Size=619,698
 Collapsed=0
 
 [Table][0x1A40F449,4]
@@ -93,6 +98,42 @@ RefScale=18
 Column 0  Sort=0v
 
 [Table][0x569AF373,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xFA806813,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x3BBD4425,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x13E78A5C,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x862ED171,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x26679D9C,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x046EFCC1,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x08067DB5,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x786EBAB5,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xBF421ED4,4]
 RefScale=18
 Column 0  Sort=0v
 
