--- a/Gears.vcxproj
+++ b/Gears.vcxproj
@@ -233,6 +233,7 @@
     <ClCompile Include="Engine\Core\gModel.cpp" />
     <ClCompile Include="Engine\Core\gObject.cpp" />
     <ClCompile Include="Engine\Core\gParticleEmitter.cpp" />
+    <ClCompile Include="Engine\Core\gRersources.cpp" />
     <ClCompile Include="Engine\Core\gSoundBuffer.cpp" />
     <ClCompile Include="Engine\Core\gSoundDevice.cpp" />
     <ClCompile Include="Engine\Core\gSoundEffectsLib.cpp" />
@@ -246,6 +247,7 @@
     <ClCompile Include="Engine\Editor\gGizmo.cpp" />
     <ClCompile Include="Engine\Editor\gGizmoInit.cpp" />
     <ClCompile Include="Engine\Editor\gHeaderPanel.cpp" />
+    <ClCompile Include="Engine\Game\gActor.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="3rdParty\imgui\imgui_impl_opengl3.h" />
@@ -267,6 +269,7 @@
     <ClInclude Include="Engine\Core\gObject.h" />
     <ClInclude Include="Engine\Core\gParticleEmitter.h" />
     <ClInclude Include="Engine\Core\gParticle.h" />
+    <ClInclude Include="Engine\Core\gResources.h" />
     <ClInclude Include="Engine\Core\gShader.h" />
     <ClInclude Include="Engine\Core\gSoundBuffer.h" />
     <ClInclude Include="Engine\Core\gSoundDevice.h" />
@@ -282,6 +285,7 @@
     <ClInclude Include="Engine\Editor\gHeaderPanel.h" />
     <ClInclude Include="Engine\Editor\gUtil.hpp" />
     <ClInclude Include="Engine\Editor\linalg.h" />
+    <ClInclude Include="Engine\Game\gActor.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="3rdParty\vcpkg\packages\libsndfile_x64-windows\bin\sndfile.dll" />
