--- a/Gears.vcxproj.filters
+++ b/Gears.vcxproj.filters
@@ -28,6 +28,9 @@
     <Filter Include="Resource Files\Header Files\Core">
       <UniqueIdentifier>{d2f67161-023c-4103-945d-d6fb9505f53f}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Resource Files\Header Files\Core\Containers">
+      <UniqueIdentifier>{8baf6f56-1924-4344-9932-63d6179560dd}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="3rdParty\opengl\glad.c">
@@ -147,6 +150,9 @@
     <ClCompile Include="Engine\Game\gTerrain.cpp">
       <Filter>Resource Files\Source Files\Editor</Filter>
     </ClCompile>
+    <ClCompile Include="Engine\Core\gPhysicsWorld.cpp">
+      <Filter>Resource Files\Source Files\Editor</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Editor\gEditor.h">
@@ -224,9 +230,6 @@
     <ClInclude Include="Engine\Editor\gContentBrowser.h">
       <Filter>Resource Files\Header Files\Editor</Filter>
     </ClInclude>
-    <ClInclude Include="Engine\Core\Containers\gObjectsList.h">
-      <Filter>Resource Files\Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Engine\Core\gObject.h">
       <Filter>Resource Files\Header Files\Core</Filter>
     </ClInclude>
@@ -235,9 +238,6 @@
     </ClInclude>
     <ClInclude Include="Engine\Core\gDefferedShading.h">
       <Filter>Resource Files\Header Files\Core</Filter>
-    </ClInclude>
-    <ClInclude Include="Engine\Core\gParticle.h">
-      <Filter>Resource Files\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Engine\Editor\linalg.h">
       <Filter>Resource Files\Header Files\Core</Filter>
@@ -258,13 +258,22 @@
       <Filter>Resource Files\Header Files\Core</Filter>
     </ClInclude>
     <ClInclude Include="Engine\Core\gPrimitives.h">
-      <Filter>Resource Files\Source Files\Core</Filter>
+      <Filter>Resource Files\Header Files\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="Engine\Core\Containers\gObjectsList.h">
+      <Filter>Resource Files\Header Files\Core\Containers</Filter>
+    </ClInclude>
+    <ClInclude Include="Engine\Core\gParticle.h">
+      <Filter>Resource Files\Header Files\Core</Filter>
     </ClInclude>
     <ClInclude Include="Engine\Core\gTimer.h">
-      <Filter>Resource Files\Source Files\Editor</Filter>
+      <Filter>Resource Files\Header Files\Core</Filter>
     </ClInclude>
     <ClInclude Include="Engine\Game\gTerrain.h">
-      <Filter>Resource Files\Source Files\Editor</Filter>
+      <Filter>Resource Files\Header Files\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="Engine\Core\gPhysicsWorld.h">
+      <Filter>Resource Files\Header Files\Core</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
